Made some updates to the image being loaded for the Udacity Portfolio page.

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Udacity Project Portfolio</title>
     <!-- Link the icon -->
     <link rel="shortcut icon" href="public/images/favicon.ico">
+
     <!--Import jQuery before materialize.js-->
     <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
 
@@ -14,6 +15,7 @@
 
     <!-- Materialize Javascript -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.5/js/materialize.min.js"></script>
+
     <link rel="stylesheet" href="public/css/styles.css">
   </head>
   <body>
@@ -24,7 +26,7 @@
             <div class="panel">
               <div class="row valign-wrapper">
                 <div class="col s2">
-                  <img src="public/images/my_picture.jpg" alt="" class="circle responsive-img header-img">
+                  <img srcset="public/images/my_picture.jpg" alt="" class="circle responsive-img header-img">
                 </div>
                 <div class="col s10">
                   <h1 class="right-align">Matthew Harmon</h1>
