--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 
     <main>
       <div class="container">
-        <div id="projectSection" class="section">
+        <div id="contentSection" class="section">
         </div>
       </div>
     </main>
@@ -49,7 +49,7 @@
     <footer>
       <div class="container">
         <div class="row">
-          <div class="col l6 s12">
+          <div class="col s12">
             <h5>About</h5>
             <p>The images provided are done by me (Matthew Harmon)</p>
             <p>Udacity Logo is from Udcity</p>
