Updated the title.

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <title>Udacity Project Portfolio</title>
+    <title>mattdharmon GitHub Portfolio</title>
     <!-- Link the icon -->
     <link rel="shortcut icon" href="public/images/favicon.ico">
 
