--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Matt Harmon</title>
     <link href='https://fonts.googleapis.com/css?family=Roboto:300,400,500,700|Material+Icons' rel="stylesheet" type="text/css">
-    <link href=./static/css/app.b9405a602e12a3e7c82ec74f266dbc98.css rel=stylesheet>
+    <link href=./docs/static/css/app.b9405a602e12a3e7c82ec74f266dbc98.css rel=stylesheet>
   </head>
   <body>
     <div id=app></div>
