--- a/404.html
+++ b/404.html
@@ -5,12 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Matt Harmon</title>
     <link href='https://fonts.googleapis.com/css?family=Roboto:300,400,500,700|Material+Icons' rel="stylesheet" type="text/css">
-    <link href=./docs/static/css/app.b9405a602e12a3e7c82ec74f266dbc98.css rel=stylesheet>
+    <link href=/docs/static/css/app.b9405a602e12a3e7c82ec74f266dbc98.css rel=stylesheet>
   </head>
   <body>
     <div id=app></div>
-    <script type=text/javascript src=./docs/static/js/manifest.c1336f541899e0fc1d73.js></script>
-    <script type=text/javascript src=./docs/static/js/vendor.a5327c5a4555f36e2329.js></script>
-    <script type=text/javascript src=./docs/static/js/app.abc8397a833b03b9b965.js></script>
+    <script type=text/javascript src=/docs/static/js/manifest.c1336f541899e0fc1d73.js></script>
+    <script type=text/javascript src=/docs/static/js/vendor.a5327c5a4555f36e2329.js></script>
+    <script type=text/javascript src=/docs/static/js/app.abc8397a833b03b9b965.js></script>
   </body>
 </html>
